--- a/src/GreykoMonitor/GreykoMonitor.csproj
+++ b/src/GreykoMonitor/GreykoMonitor.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Communication\Commands\CommandBase.cs" />
     <Compile Include="Communication\ICommandProcessor.cs" />
     <Compile Include="Communication\Commands\GeneralInformationCommand.cs" />
     <Compile Include="Communication\Commands\ICommand.cs" />
