--- a/src/GreykoMonitor.Test/GreykoMonitor.Test.csproj
+++ b/src/GreykoMonitor.Test/GreykoMonitor.Test.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="GeneralInformationCommandTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetBoilerTemperatureCommandTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GreykoMonitor\GreykoMonitor.csproj">
