--- a/src/GreykoMonitor/GreykoMonitor.csproj
+++ b/src/GreykoMonitor/GreykoMonitor.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communication\Commands\CommandBase.cs" />
+    <Compile Include="Communication\Commands\SetBoilerTemperatureCommand.cs" />
     <Compile Include="Communication\ICommandProcessor.cs" />
     <Compile Include="Communication\Commands\GeneralInformationCommand.cs" />
     <Compile Include="Communication\Commands\ICommand.cs" />
