--- a/src/GreykoMonitor/GreykoMonitor.csproj
+++ b/src/GreykoMonitor/GreykoMonitor.csproj
@@ -47,6 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communication\Commands\CommandBase.cs" />
+    <Compile Include="Communication\Commands\Enums\Mode.cs" />
+    <Compile Include="Communication\Commands\Enums\Power.cs" />
+    <Compile Include="Communication\Commands\Enums\State.cs" />
+    <Compile Include="Communication\Commands\Enums\Status.cs" />
     <Compile Include="Communication\Commands\SetBoilerTemperatureCommand.cs" />
     <Compile Include="Communication\ICommandProcessor.cs" />
     <Compile Include="Communication\Commands\GeneralInformationCommand.cs" />
