--- a/src/GreykoMonitor/GreykoMonitor.csproj
+++ b/src/GreykoMonitor/GreykoMonitor.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communication\Commands\CommandBase.cs" />
+    <Compile Include="Communication\Commands\ResetFeederCounterCommand.cs" />
     <Compile Include="Communication\Entities\FailResponse.cs" />
     <Compile Include="Communication\Entities\GeneralInformationResponse.cs" />
     <Compile Include="Communication\Entities\IResponse.cs" />
